# hypridle_manager

./: Cargo.toml  README.md
src/: main.rs
