[package]
name = "hypridle_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
futures = "0.3.30"
log = "0.4.21"
ron = "0.8.1"
serde = { version = "1.0.203", features = ["derive"] }
simplelog = "0.12.2"
tokio = { version = "1.38.0", features = ["full"] }
upower_dbus = "0.3.2"
zbus = "3.15.2"
